trying to fix Safari scroll problem with overflow hidden

--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@
 
 html{
 	overflow-x: hidden;
+	-webkit-overflow-scrolling: touch; /* Safari scroll bug */
 }
 
 body{
